cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_125.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/rc2/rc2_ecb.c:39: error: DEAD_STORE
  The value written to &l (type unsigned long) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/rc2/rc2_ecb.c:39:5: Write of unused value
37.       l = d[1];
38.       l2c(l, out);
39.       l = d[0] = d[1] = 0;
          ^
40.   }
